2006-03-22  Michael Stucki  <michael@typo3.org>

	* Changed Install Tool so it accepts newlines in values (needed for recently introduced textarea fields)
	* Changed style of admin-menu title in alt_menu.php so it looks equally to the headers above
	* Fixed bug #1932: Can't limit content columns for Page>QuickEdit
	* Fixed bug #2596: "=undefined" when transferring TSconfig code from TSconfig wizard to textarea
	* Changed RFC: "flagBitMask" default value in indexed_search (seems like this was a typo) / The change has no effect but is more logical for understanding the concept.

2006-03-22  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Corrections/adjustments to the htmlArea RTE extension (see details in local ChangeLog)

2006-03-22  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Updated almost all Function indexes in the core plus fixed javaDoc documentation for the functions and classes I could manage to do. The rest of you; Please make sure to document the functions and classes you have added during development of 4.0! Search for "[type]" or "[Describe" to find places to add documentation.

2006-03-20  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Added function to indexed search so index_fulldata is filled with less content (configurable)
	* Added function so that the HTML data of the cache_pages table can be stored in the file system (see TYPO3_CONF_VARS[FE][pageCacheToExternalFiles]
	* Both changes are new features excused by optimization of TYPO3.org.

2006-03-21  Karsten Dambekalns  <karsten@typo3.org>

	* EM: Moved some code around and added a method for installing an extension with one method call (for use in impexp)

2006-03-20  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Fixed more workspace issues:
	* Added info about workspaces to Tools > User Admin (sorry, considered important)
	* Frontend editing: Fixed that it works with localizations. Disabled many of the features in draft workspaces (since we have no time for an implementation)
