@@ -1,3 +1,7 @@
+2006-03-22  Bernhard Kraft  <kraftb@kraftb.at>
+
+  * Fixed bug #2692: GIFBUILDER inverts transparency
+
 2006-03-22  Michael Stucki  <michael@typo3.org>
 
 	* Changed Install Tool so it accepts newlines in values (needed for recently introduced textarea fields)
